# embedding_python_executable

./: README.md
data/: python_script.py
scripts/: build.sh
src/: CMakeLists.txt  main.cpp  my_code.cpp  my_code.h  requirements.txt  structs.h
